# finportfolio

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
finportfolio/: __init__.py
finportfolio.egg-info/: SOURCES.txt  requires.txt
finportfolio/data/: __init__.py  loader.py
finportfolio/equilibrium/: __init__.py  capm.py
finportfolio/factors/: __init__.py  models.py
finportfolio/optimization/: __init__.py  markowitz.py
finportfolio/performance/: __init__.py  metrics.py
finportfolio/returns/: __init__.py  stats.py
notebooks/: tutorial.ipynb  tutorial_es.ipynb
scripts/: example.py
tests/: test_finportfolio.py
